[package]
name = "electionguard"
version = "0.1.0"
edition = "2021"
publish = false

[features]
default = ["eg-allow-unsafe-code", "eg-test-data-generation"]
eg-allow-unsafe-code = []
eg-test-data-generation = ["eg/eg-test-data-generation"]

[dependencies]
anyhow.workspace = true
clap.workspace = true
rand_core = { workspace = true, features = ["getrandom"] }

eg.workspace = true
util.workspace = true
# preencrypted.workspace = true
