[package]
name = "preencrypted"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow.workspace = true
clap.workspace = true
num-bigint.workspace = true
#num-integer.workspace = true
num-traits.workspace = true
serde.workspace = true
serde_json.workspace = true

eg.workspace = true
util.workspace = true
