[package]
name = "preencrypted"
version = "0.1.0"
edition = "2021"
publish = false

[features]
default = [
    "eg-allow-unsafe-code",
    #"eg-forbid-test-data-generation",
    #"eg-forbid-toy-parameters",
]
eg-allow-unsafe-code = []
eg-allow-test-data-generation = []
eg-forbid-test-data-generation = []
eg-allow-toy-parameters = []
eg-forbid-toy-parameters = []

[dependencies]
anyhow.workspace = true
clap.workspace = true
num-bigint.workspace = true
#num-integer.workspace = true
num-traits.workspace = true
serde.workspace = true
serde_json.workspace = true

eg.workspace = true
util.workspace = true

#--- RustCrypto
# crypto-common.workspace = true
# digest.workspace = true
# hmac.workspace = true
# sha2.workspace = true
# sha3.workspace = true
# zeroize.workspace = true
