[package]
name = "util"
version = "0.1.0"
edition = "2024"
publish = false

[features]
default = [
    "eg-allow-unsafe-code",
    #"eg-forbid-insecure-deterministic-csprng",
    #"eg-forbid-test-data-generation",
    #"eg-forbid-toy-parameters",
]
eg-allow-unsafe-code = []
eg-allow-insecure-deterministic-csprng = []
eg-forbid-insecure-deterministic-csprng = []
eg-allow-test-data-generation = []
eg-forbid-test-data-generation = []
eg-allow-toy-parameters = []
eg-forbid-toy-parameters = []

[dependencies]

#--- Defined in this workspace

#--- From crates.io
anyhow.workspace = true
faster-hex.workspace = true
getrandom.workspace = true
itertools.workspace = true
num-bigint.workspace = true
num-integer.workspace = true
num-traits.workspace = true
nutype.workspace = true
static_assertions.workspace = true
thiserror.workspace = true

#--- Rand
rand.workspace = true
rand_core.workspace = true
rand_distr.workspace = true
rand_xorshift.workspace = true

#--- RustCrypto
# crypto-common.workspace = true
# digest.workspace = true
# hmac.workspace = true
# sha2.workspace = true
sha3.workspace = true
zeroize.workspace = true

#--- Serde
serde.workspace = true
serde_json.workspace = true
serde_with.workspace = true

#--- Tracing
tracing.workspace = true
#valuable.workspace = true

[dev-dependencies]
insta = { version = "1.42.2", features = ["ron"] }
